--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "eslint": "9.37.0",
     "typescript": "5.9.3",
     "vite": "7.1.7"
   }
