--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@eslint/css": "^0.13.0",
+    "@eslint/js": "^9.37.0",
+    "@stylistic/eslint-plugin": "5.4.0",
     "eslint": "9.37.0",
+    "globals": "^16.4.0",
+    "jiti": "^2.6.1",
     "typescript": "5.9.3",
+    "typescript-eslint": "8.46.1-alpha.3",
     "vite": "7.1.7"
   }
 }
